Added Play Again feature

--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,10 @@
 	padding: 30px;
 }
 
-#player-choice{
+#player-choice {
 	text-align: center;
 	margin: 0 auto 15px;
+	position: relative;
 }
 
 #player-choice button {
@@ -15,7 +16,20 @@
 	border: none;
 	margin: 0px 10px;
 }
-
+#reset {
+	display: none;
+	text-align: center;
+	margin: 0 auto 15px;
+	
+}
+#reset button {
+	font-size: 18px;
+	font-weight: bold;
+	color: white;
+	border-radius: 40%;
+	border: none;
+	margin: 0px 10px;
+}
 #board-wrapper{
 	background-color: black;
 	width: 75%;
