--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+body {
+}
 #game-wrapper{
 	padding: 30px;
 }
@@ -8,13 +10,14 @@
 	position: relative;
 }
 
-#player-choice button {
+#player-choice button, #reset button  {
 	font-size: 18px;
 	font-weight: bold;
-	color: white;
-	border-radius: 40%;
+	color: #8000FF;
+	border-radius: 30px;
 	border: none;
 	margin: 0px 10px;
+	background-color: #ddd;
 }
 #reset {
 	display: none;
@@ -22,14 +25,7 @@
 	margin: 0 auto 15px;
 	
 }
-#reset button {
-	font-size: 18px;
-	font-weight: bold;
-	color: white;
-	border-radius: 40%;
-	border: none;
-	margin: 0px 10px;
-}
+
 #board-wrapper{
 	background-color: black;
 	width: 75%;
@@ -37,11 +33,13 @@
 	min-width: 360px;
 	margin: 0 auto;	
 	overflow: hidden;
+	position: relative;
 }
 
 #row1, #row2, #row3{
     overflow: hidden;
     margin-bottom: 5%;
+    position: relative;
 }
 #row3{
 	margin-bottom: 0px;
@@ -88,4 +86,106 @@
 
 .winner{
 	background: green;
+}
+
+/* ---------- styles for the red line through the winning squares ----*/
+
+
+#left-diag{
+	display: none;
+	width: 5px;
+	height: 858px;
+	background-color: red;
+	position: absolute;
+	top: 2%;
+	left: 17px;
+	transform: rotate(-44.5deg);
+	transform-origin: 0% 0%;
+	z-index: 1;
+}
+
+#right-diag {
+	display: none;
+	width: 5px;
+	height: 858px;
+	background-color: red;
+	position: absolute;
+	top: 2%;
+	left: 620px;
+	transform: rotate(44.5deg);
+	transform-origin: 0% 0%;
+	z-index: 1;
+}
+#top-horiz {
+	display: none;
+	width: 5px;
+	height: 600px;
+	background-color: red;
+	position: absolute;
+	top: 15%;
+	left: 17px;
+	transform: rotate(-90deg);
+	transform-origin: 0% 0%;
+	z-index: 1;
+}
+#mid-horiz {
+	display: none;
+	width: 5px;
+	height: 600px;
+	background-color: red;
+	position: absolute;
+	top: 50%;
+	left: 17px;
+	transform: rotate(-90deg);
+	transform-origin: 0% 0%;
+	z-index: 1;
+}
+
+#bottom-horiz {
+	display: none;
+	width: 5px;
+	height: 130%;
+	background-color: red;
+	position: absolute;
+	top: 82%;
+	left: 8%;
+	transform: rotate(-90deg);
+	transform-origin: 0% 0%;
+	z-index: 1;
+}
+#left-vert {
+	display: none;
+	width: 5px;
+	height: 95%;
+	background-color: red;
+	position: absolute;
+	top: 3%;
+	left: 94px;
+	transform: rotate(0 deg);
+	transform-origin: 0% 0%;
+	z-index: 1;
+}
+#mid-vert {
+	display: none;
+	width: 3px;
+	height: 95%;
+	background-color: red;
+	position: absolute;
+	top: 3%;
+	left: 50%;
+	transform: rotate(0 deg);
+	transform-origin: 0% 0%;
+	z-index: 1;
+}
+#right-vert {
+	display: none;
+	width: 3px;
+	height: 95%;
+	background-color: red;
+	position: absolute;
+	top: 3%;
+	left: 505px;
+	transform: rotate(0 deg);
+	transform-origin: 0% 0%;
+	z-index: 1;
 }
